target/debug/build/sensevoice-sys-8eed3d7b8569a088/out/bindings.rs

/* automatically generated by rust-bindgen 0.69.5 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SenseVoiceContext {
    _unused: [u8; 0],
}
extern "C" {
    #[doc = " 创建 SenseVoice 上下文\n\n @param model_path 模型文件路径\n @param num_threads 推理线程数 (0 表示自动检测)\n @param use_gpu 是否使用 GPU 加速 (1=是, 0=否)\n @return 成功返回上下文指针，失败返回 NULL"]
    pub fn sensevoice_create_context(
        model_path: *const ::core::ffi::c_char,
        num_threads: ::core::ffi::c_int,
        use_gpu: ::core::ffi::c_int,
    ) -> *mut SenseVoiceContext;
}
extern "C" {
    #[doc = " 销毁 SenseVoice 上下文\n\n @param ctx 上下文指针"]
    pub fn sensevoice_free_context(ctx: *mut SenseVoiceContext);
}
#[doc = " 转录片段"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SenseVoiceSegment {
    pub text: *mut ::core::ffi::c_char,
    pub start_time: f32,
    pub end_time: f32,
}
#[test]
fn bindgen_test_layout_SenseVoiceSegment() {
    const UNINIT: ::core::mem::MaybeUninit<SenseVoiceSegment> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<SenseVoiceSegment>(),
        16usize,
        concat!("Size of: ", stringify!(SenseVoiceSegment))
    );
    assert_eq!(
        ::core::mem::align_of::<SenseVoiceSegment>(),
        8usize,
        concat!("Alignment of ", stringify!(SenseVoiceSegment))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).text) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(SenseVoiceSegment),
            "::",
            stringify!(text)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).start_time) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(SenseVoiceSegment),
            "::",
            stringify!(start_time)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).end_time) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(SenseVoiceSegment),
            "::",
            stringify!(end_time)
        )
    );
}
#[doc = " 转录结果"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SenseVoiceResult {
    pub segments: *mut SenseVoiceSegment,
    pub num_segments: usize,
    pub language: *mut ::core::ffi::c_char,
}
#[test]
fn bindgen_test_layout_SenseVoiceResult() {
    const UNINIT: ::core::mem::MaybeUninit<SenseVoiceResult> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<SenseVoiceResult>(),
        24usize,
        concat!("Size of: ", stringify!(SenseVoiceResult))
    );
    assert_eq!(
        ::core::mem::align_of::<SenseVoiceResult>(),
        8usize,
        concat!("Alignment of ", stringify!(SenseVoiceResult))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).segments) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(SenseVoiceResult),
            "::",
            stringify!(segments)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).num_segments) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(SenseVoiceResult),
            "::",
            stringify!(num_segments)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).language) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(SenseVoiceResult),
            "::",
            stringify!(language)
        )
    );
}
extern "C" {
    #[doc = " 转录音频\n\n @param ctx 上下文指针\n @param audio_data 音频数据 (f32, 16kHz, mono)\n @param audio_length 音频样本数\n @return 转录结果，使用后需调用 sensevoice_free_result 释放"]
    pub fn sensevoice_transcribe(
        ctx: *mut SenseVoiceContext,
        audio_data: *const f32,
        audio_length: usize,
    ) -> *mut SenseVoiceResult;
}
extern "C" {
    #[doc = " 释放转录结果\n\n @param result 结果指针"]
    pub fn sensevoice_free_result(result: *mut SenseVoiceResult);
}
extern "C" {
    #[doc = " 获取最后一次错误信息\n\n @return 错误信息字符串 (内部缓冲区，不需要释放)"]
    pub fn sensevoice_get_last_error() -> *const ::core::ffi::c_char;
}
